--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,9 @@ header img{ /*Un valor maximo a la imagen del logo*/
   padding: 15px;
   display: inline-block;
 }
+.textoo{
+  width : 80%;
+}
 .menu_ordenador>ul div li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
